--- a/HW2_1/HW2_1.csproj
+++ b/HW2_1/HW2_1.csproj
@@ -1,8 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="HW2_2\" />
+    <Folder Include="HW2_3\" />
+    <Folder Include="HW2_4\" />
+    <Folder Include="HW2_5\" />
+  </ItemGroup>
 
 </Project>
